k8s/istio/disable-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls
  namespace: todo-app
spec:
  mtls:
    mode: DISABLE
