k8s/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1  # Changed from v1alpha3
kind: Gateway
metadata:
  name: todo-app-gateway
  namespace: todo-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
